--- a/app/pages/dogs/add-dog/add-dog.component.html
+++ b/app/pages/dogs/add-dog/add-dog.component.html
@@ -14,6 +14,17 @@
   <form #dogForm="ngForm"> 
     <ion-grid>
       <ion-row>
+        <ion-col size-xs="4" size-sm="3">
+          <app-image-picker (imagePick)="onImagePicked($event)" #imgPicker></app-image-picker>
+        </ion-col>
+        <ion-col>
+          <ion-item>
+            <ion-label position="floating">KC Name</ion-label>
+            <ion-input type="text" ngModel name="kc_name"></ion-input>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+      <ion-row>
         <ion-col>
           <ion-item>
             <ion-label position="floating">Name</ion-label>
