--- a/app/pages/stats/add-weight/add-weight.component.html
+++ b/app/pages/stats/add-weight/add-weight.component.html
@@ -18,22 +18,22 @@
         <ion-item>
           <ion-label>Dog</ion-label>
           <ion-select interface="popover" ngModel name="dog" required>
-            <ion-select-option *ngFor="let dog of authService.dogs | async" [value]="dog">{{ dog.name }}</ion-select-option>
+            <ion-select-option *ngFor="let dog of dogs | async" [value]="dog">{{ dog.name }}</ion-select-option>
           </ion-select>
         </ion-item>
       </ion-col>
     </ion-row>
     <ion-row>
-      <ion-col>
+      <ion-col size="12" size-md="6">
         <ion-item>
           <ion-label>Date</ion-label>
           <ion-datetime name="date" [(ngModel)]="today" required></ion-datetime>
         </ion-item>
       </ion-col>
-      <ion-col>
+      <ion-col size="12" size-md="6">
         <ion-item>
           <ion-label>Weight</ion-label>
-          <ion-input type="decimal" ngModel name="weight" class="ion-text-right ion-margin-end" placeholder="0.00" required></ion-input>
+          <ion-input type="number" inputmode="decimal" ngModel name="weight" class="ion-text-right ion-margin-end" placeholder="0.00" required></ion-input>
           <ion-label color="medium">kg</ion-label>
         </ion-item>
       </ion-col>
