--- a/app/pages/layout/layout.page.html
+++ b/app/pages/layout/layout.page.html
@@ -22,7 +22,7 @@
             <ion-item detail class="ion-margin-vertical" [routerLink]="['/app/dzd/dogs/', dog.id]">
               <ion-avatar slot="start" class="dogAvatar" [style.border-color]="dog.color" [style.background-color]="dog.color">
                 <img *ngIf="dog.imageUrl; else genericImg" [src]="dog.imageUrl" />
-                <ng-template #genericImg><img src="../../assets/img/generic-paw.png" /></ng-template>
+                <ng-template #genericImg><img [src]="validatePaw(dog?.colorText)" /></ng-template>
               </ion-avatar>
               <ion-label><h2 class="ion-text-uppercase" [style.color]="dog.color">{{ dog.name }}</h2></ion-label>
             </ion-item>
