work done on schedule page/sections

--- a/app/pages/dogs/dog/dog.page.scss
+++ b/app/pages/dogs/dog/dog.page.scss
@@ -9,6 +9,7 @@ ion-item:last-child {
   --inner-border-width: 0;
 }
 
-.eventDate {
-  margin: 13px 32px 13px 0px;
+ion-card-title {
+  font-size: 18px;
+  font-weight: 500;
 }
