passed form to dog picker component

--- a/app/pages/schedule/add-reminder/add-reminder.component.html
+++ b/app/pages/schedule/add-reminder/add-reminder.component.html
@@ -30,7 +30,7 @@
 
       <ion-row>
         <ion-col size="12">
-          <app-dog-picker [dogList]="dogList" #dogPicker></app-dog-picker>
+          <app-dog-picker #dogPicker [dogList]="dogList" [form]="reminderForm"></app-dog-picker>
         </ion-col>
       </ion-row>
 
