--- a/global.scss
+++ b/global.scss
@@ -315,3 +315,9 @@ ion-avatar.dogAvatar {
 .ion-invalid.ion-touched ion-label {
     color: var(--ion-color-danger);
 }
+
+
+.fa-primary { color: var(--ion-color-primary); }
+.fa-danger { color: var(--ion-color-danger); }
+.fa-success { color: var(--ion-color-success); }
+.fa-warning { color: var(--ion-color-warning); }
